--- a/react-systematic-master/01React核心知识/day1129/src/views/Task.less
+++ b/react-systematic-master/01React核心知识/day1129/src/views/Task.less
@@ -1,37 +1,37 @@
 .task-box {
-    box-sizing: border-box;
-    margin: 0 auto;
-    width: 800px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 800px;
 
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #DDD;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
 
-        .title {
-            font-size: 20px;
-            line-height: 50px;
-        }
+    .title {
+      font-size: 20px;
+      line-height: 50px;
     }
+  }
 
-    .tag-box {
-        margin: 15px 0;
+  .tag-box {
+    margin: 15px 0;
 
-        .ant-tag {
-            margin-inline-end: 15px;
-            padding-inline: 15px;
-            border-radius: 0;
-            font-size: 14px;
-            line-height: 30px;
-            cursor: pointer;
-        }
+    .ant-tag {
+      margin-inline-end: 15px;
+      padding-inline: 15px;
+      border-radius: 0;
+      font-size: 14px;
+      line-height: 30px;
+      cursor: pointer;
     }
+  }
 
-    .ant-table-cell {
-        .ant-btn-link {
-            padding: 4px;
-        }
+  .ant-table-cell {
+    .ant-btn-link {
+      padding: 4px;
     }
+  }
 }
