--- a/react-systematic-master/01React核心知识/day1207/src/views/Vote.less
+++ b/react-systematic-master/01React核心知识/day1207/src/views/Vote.less
@@ -1,34 +1,34 @@
 .vote-box {
-    box-sizing: border-box;
-    margin: 0 auto;
-    width: 300px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  width: 300px;
 
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid #DDD;
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
 
-        .title {
-            font-size: 18px;
-            line-height: 50px;
-        }
-
-        .num {
-            font-size: 18px;
-        }
+    .title {
+      font-size: 18px;
+      line-height: 50px;
     }
 
-    .main {
-        padding: 15px 0;
-
-        p {
-            line-height: 35px;
-            font-size: 15px;
-        }
+    .num {
+      font-size: 18px;
     }
+  }
 
-    .ant-btn {
-        margin-right: 15px;
+  .main {
+    padding: 15px 0;
+
+    p {
+      line-height: 35px;
+      font-size: 15px;
     }
+  }
+
+  .ant-btn {
+    margin-right: 15px;
+  }
 }
