--- a/react-systematic-master/01React核心知识/day1219/src/index.less
+++ b/react-systematic-master/01React核心知识/day1219/src/index.less
@@ -1,19 +1,19 @@
-@import './assets/reset.min.css';
+@import "./assets/reset.min.css";
 
 /* 全局样式 */
 .ant-btn {
-    border-radius: 0;
+  border-radius: 0;
 
-    &.ant-btn-sm {
-        border-radius: 0;
-    }
+  &.ant-btn-sm {
+    border-radius: 0;
+  }
 }
 
 .ant-input,
 .ant-picker {
-    border-radius: 0;
+  border-radius: 0;
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
